--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^7.0.0",
+    "prettier": "2.7.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2"
   },
